deployments/dawarich/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/pollSchedule: "@every 72h"
  name: dawarich-sidekiq
  namespace: dawarich
  labels:
    app: dawarich-sidekiq
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dawarich-sidekiq
  template:
    metadata:
      labels:
        app: dawarich-sidekiq
    spec:
      nodeSelector:
        svccontroller.k3s.cattle.io/lbpool: lamg
      containers:
      - name: dawarich-sidekiq
        image: freikin/dawarich:latest
        command: ["bundle", "exec", "sidekiq"]
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 1536Mi
        volumeMounts:
        - name: dawarich-public
          mountPath: /var/app/public
        - name: dawarich-watched
          mountPath: /var/app/tmp/imports/watched
        - name: dawarich-storage
          mountPath: /var/app/storage
        - name: dawarich-tmp
          mountPath: /var/app/tmp
        livenessProbe:
          exec:
            command:
            - bundle
            - exec
            - sidekiqmon
            - processes
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30
      securityContext:
        fsGroup: 1000
      volumes:
      - name: dawarich-public
        nfs:
          server: 192.168.0.29
          path: /mnt/RAID/docker/dawarich/public
      - name: dawarich-watched
        nfs:
          server: 192.168.0.29
          path: /mnt/RAID/docker/dawarich/watched
      - name: dawarich-storage
        nfs:
          server: 192.168.0.29
          path: /mnt/RAID/docker/dawarich/storage
      - name: dawarich-tmp
        nfs:
          server: 192.168.0.29
          path: /mnt/RAID/docker/dawarich/tmp
